add_executable(lc1656 lc1656.cc)
add_executable(lc1472 lc1472.cc)
add_executable(lc933 lc933.cc)
add_executable(lc705 lc705.cc)
add_executable(lc1512 lc1512.cc)
add_executable(lc706 lc706.cc)
add_executable(lc707 lc707.cc)
add_executable(lc500 lc500.cc)
add_executable(lc475 lc475.cc)
add_executable(lc1818 lc1818.cc)
add_executable(lc1684 lc1684.cc)
add_executable(lc2089 lc2089.cc)
add_executable(lc914 lc914.cc)
add_executable(lc771 lc771.cc)
add_executable(lc1742 lc1742.cc)
